--- a/官方信息.md
+++ b/官方信息.md
@@ -1,8 +1,14 @@
 * **本文档列明五民党在各个平台的官方账号、官方网站、联系方式和募捐地址等信息，未在此列明的则不属于本党之官方信息，请党友们谨防上当受骗，谨防敌人抹黑破坏。**   
-* 电报交流群：https://t.me/wumindangjl
-* 电报技术群：https://t.me/wumindangjs
+* 中华联邦电报群：https://t.me/frczhlb1
+* 中华联邦推特群：https://twitter.com/i/communities/1897908655141359925
+* 中华联邦技术群：https://t.me/frczhlbjs
+* 官方GitHub：https://github.com/wumindang
+* 中联社推特：zhonglianshe
+* 五民党推特：wumindang
+* 公民日报推特：gongminribao
+* 联邦政府网：暂无
+* 公民安全网：暂无
 * 五民党官网：暂无
-* GitHub：https://github.com/wumindang
 * 募捐钱包地址：
         
         0x0138ec28A799f5C0872Df7B8250784A7fe09ea65
@@ -12,9 +18,3 @@
 * 党费钱包地址：
         
         0xC7697B039A30BFc3385803ed5c272c6D939e36D6  
-* 推特（X）：
-        
-        wumindang
-* 脸书（Facebook）：
-        
-        wumindang
