--- a/官方信息.md
+++ b/官方信息.md
@@ -1,7 +1,6 @@
 * **本文档列明五民党在各个平台的官方账号、官方网站、联系方式和募捐地址等信息，未在此列明的则不属于本党之官方信息，请党友们谨防上当受骗，谨防敌人抹黑破坏。**   
 * 中华联邦电报群：https://t.me/frczhlb1
 * 中华联邦推特群：https://twitter.com/i/communities/1897908655141359925
-* 中华联邦技术群：https://t.me/frczhlbjs
 * 官方GitHub：https://github.com/wumindang
 * 中联社推特：zhonglianshe
 * 五民党推特：wumindang
@@ -9,12 +8,14 @@
 * 联邦政府网：暂无
 * 公民安全网：暂无
 * 五民党官网：暂无
-* 募捐钱包地址：
-        
-        0x0138ec28A799f5C0872Df7B8250784A7fe09ea65
-* 代币合约地址：
+* 五民币官网：www.wuminbi.com
 
-        0xC6278ED2d3ad4c1486DD99bC0e06bDa010Ae0936
-* 党费钱包地址：
+* 融资钱包地址：购买五民币的朋友，请复制下列以太坊地址支付USDT，1USDT=1000WMB
         
-        0xC7697B039A30BFc3385803ed5c272c6D939e36D6  
+        0x9050cdf40C693351dBBE83370535303B9BA88696
+* 募捐钱包地址：资助我们五民党的朋友，请复制下列以太坊地址捐助USDT，1U也是爱❤️
+
+        0xEbbD04C4fDcA969D9a7F7db8FD882902663999fD
+* 党费钱包地址：加入五民党的党友，请按党章规定支付党费，复制下列以太坊地址支付USDT
+        
+        0x9370007cA12d696977224b85D7Eaa7E5DeFE7623  
