--- a/官方信息.md
+++ b/官方信息.md
@@ -1,6 +1,7 @@
 * **本文档列明五民党在各个平台的官方账号、官方网站、联系方式和募捐地址等信息，未在此列明的则不属于本党之官方信息，请党友们谨防上当受骗，谨防敌人抹黑破坏。**   
-* 中华联邦电报群：https://t.me/frczhlb1
-* 中华联邦推特群：https://twitter.com/i/communities/1897908655141359925
+* 中华联邦Discord：https://discord.gg/WbEdn2sYXq
+* 中华联邦电报：https://t.me/frczhlb1
+* 中华联邦推特：https://twitter.com/i/communities/1897908655141359925
 * 官方GitHub：https://github.com/wumindang
 * 中联社推特：zhonglianshe
 * 五民党推特：wumindang
