--- a/官方信息.md
+++ b/官方信息.md
@@ -1,5 +1,5 @@
 * **本文档列明五民党在各个平台的官方账号、官方网站、联系方式和募捐地址等信息，未在此列明的则不属于本党之官方信息，请党友们谨防上当受骗，谨防敌人抹黑破坏。**   
-* 中华联邦Discord：https://discord.gg/WbEdn2sYXq
+* 中华联邦Discord：https://discord.gg/ZavAqjcqn4
 * 中华联邦电报：https://t.me/frczhlb1
 * 中华联邦推特：https://twitter.com/i/communities/1897908655141359925
 * 官方GitHub：https://github.com/wumindang
@@ -15,6 +15,10 @@
         
         0x5Ce9B56b9D1812a7cF29841E21756F09cA7D223B
 
-* 党费钱包地址：加入五民党的党友，请按党章规定支付党费，复制下列以太坊地址支付USDT
+* 发行钱包地址：
         
         0x0b5b2dfdc5bcde225bdad40083af5a80883a0922  
+
+* 党费钱包地址：加入五民党的党友，请按党章规定支付党费，复制下列以太坊地址支付USDT
+        
+        0x164afac6284d94017ede2c8d02636c71d19c775c  
