--- a/官方信息.md
+++ b/官方信息.md
@@ -1,24 +1,25 @@
-* **本文档列明五民党在各个平台的官方账号、官方网站、联系方式和募捐地址等信息，未在此列明的则不属于本党之官方信息，请党友们谨防上当受骗，谨防敌人抹黑破坏。**   
-* 中华联邦Discord：https://discord.gg/ZavAqjcqn4
-* 中华联邦电报：https://t.me/frczhlb1
-* 中华联邦推特：https://twitter.com/i/communities/1897908655141359925
+* **本文档列明中华联邦和五民党的官方信息，未列明的则不属于官方，谨防上当受骗，谨防抹黑破坏。**
+* 中华联邦Discord：https://discord.gg/rdnzcbYryr
+* 中华联邦电报群：https://t.me/frczhlb1
+* 中联社推特：https://x.com/zhonglianshe
 * 官方GitHub：https://github.com/wumindang
-* 中联社推特：zhonglianshe
-* 五民党推特：wumindang
-* 公民日报推特：gongminribao
+* 五民党推特：https://x.com/wumindang
+* 公民日报推特：https://x.com/gongminribao
 * 联邦政府网：暂无
 * 公民安全网：暂无
 * 五民党官网：暂无
 * 五民币官网：www.wuminbi.com
 
-* 融资钱包地址：购买五民币的朋友，请复制下列以太坊地址支付USDT，1USDT=1000WMB
-        
-        0x5Ce9B56b9D1812a7cF29841E21756F09cA7D223B
+* **融资缴费**
+* 收款地址：0x5Ce9B56b9D1812a7cF29841E21756F09cA7D223B
+* 购买五民币：1 USDT = 1000 WMB；
+* 领取关注or推荐奖励，需支付 1 USDT手续费；
+* 领取入籍奖励，需支付 10 USDT手续费；
+* 请复制以太坊【收款地址】支付USDT。
 
-* 发行钱包地址：
-        
-        0x0b5b2dfdc5bcde225bdad40083af5a80883a0922  
+* **五民党《DeFi民运》发行智能合约**
+* 以太坊合约地址：0xE7723686c4AE5BDF19c8f0c4F6EB4c6195640060
 
-* 党费钱包地址：加入五民党的党友，请按党章规定支付党费，复制下列以太坊地址支付USDT
-        
-        0x164afac6284d94017ede2c8d02636c71d19c775c  
+* **缴纳党费**
+* 缴款地址：0x164afac6284d94017ede2c8d02636c71d19c775c
+* 加入五民党的党友，每人每年需支付1000 WMB党费，请复制以太坊【缴款地址】支付WMB。
