--- a/五民党文档库/五民党党章.md
+++ b/五民党文档库/五民党党章.md
@@ -166,7 +166,7 @@
 ### 第十八条	
 凡本党党员以本党的名义从事任何社会事务的，需得到本党组织的书面授权许可，未经授权许可的，其一切行为皆为个人行为，本党概不负责；且本党党员有加入其他政治团体的，需公开退出后方可拥有本党党员权利，加入多个政治团体的本党党员，不具有任何本党党员权利。
 ### 第十九条	
-凡本党正式之党员，应按自然年缴纳党费，党员年税后收入在五民币10万元以下的，每年需缴纳党费50元以上；党员年税后收入在10万元（含）以上50万元以下的，每年需缴纳党费500元以上 ；党员年税后收入在50万元（含）以上的，每年需缴纳党费5000元以上；超过两年未缴纳党费的党员，不得被推荐为干部党员，不得被推荐为从政党员。
+凡本党正式之党员，应按自然年缴纳党费，党员年税后收入在五民币3万元以下的，可豁免缴纳党费；党员年税后收入在3万元（含）以上的，每年需缴纳党费1000元五民币以上；除豁免党员外，超过两年未缴纳党费的党员，不得被推荐为干部党员，不得被推荐为从政党员。
 ****
 ## 第三章	党组织
 ![alt text](https://raw.githubusercontent.com/wumindang/ZG/main/中国五民党文档库/党组织架构.png)
