--- a/宪政博客/宪法第一章/论中国民主的未来之《五民宪法》详解 第2篇.md
+++ b/宪政博客/宪法第一章/论中国民主的未来之《五民宪法》详解 第2篇.md
@@ -1,5 +1,6 @@
-论中国民主的未来之《五民宪法》详解 第2篇  外篇——告同胞书与国情现状
-作者：何清风 
+# <p align="center">**论中国民主的未来之《五民宪法》详解 第2篇**</p>
+# <p align="center">外篇———告同胞书与国情现状</p>
+### **作者：何清风**
 告同胞书：
     港澳台同胞、海内外侨胞都是血浓于水的一母同胞，虽因种种历史原因，大陆一直未能实现政治体制的民主化，造成大陆同胞尚且生活在水深火热之中。恳请港澳台、海内外同胞，积极参与五民主义的宣传，积极参与组建中华民族联邦共和国政府，积极向欧美等发达国家宣传推荐五民党的理念、主义和目标。
     但真正决定未来命运的，仍是中国大陆的同胞们。我们必须站起来、站出来，行使我们作为一个公民应有的权利，推翻一切集权与专制的统治，为我们的子孙后代留下蓝天白云与自由空气。
