--- a/宪政博客/宪法第一章/论中国民主的未来之《五民宪法》详解 第2篇.md
+++ b/宪政博客/宪法第一章/论中国民主的未来之《五民宪法》详解 第2篇.md
@@ -1,18 +1,16 @@
 # <p align="center">**论中国民主的未来之《五民宪法》详解 第2篇**</p>
 # <p align="center">外篇———告同胞书与国情现状</p>
 ### **作者：何清风**
-告同胞书：
-    港澳台同胞、海内外侨胞都是血浓于水的一母同胞，虽因种种历史原因，大陆一直未能实现政治体制的民主化，造成大陆同胞尚且生活在水深火热之中。恳请港澳台、海内外同胞，积极参与五民主义的宣传，积极参与组建中华民族联邦共和国政府，积极向欧美等发达国家宣传推荐五民党的理念、主义和目标。
-    但真正决定未来命运的，仍是中国大陆的同胞们。我们必须站起来、站出来，行使我们作为一个公民应有的权利，推翻一切集权与专制的统治，为我们的子孙后代留下蓝天白云与自由空气。
-    敬告每一个正在沉默的同胞，我们的沉默是在犯罪，我们的沉默造成了恶魔的肆无忌惮和为所欲为，因为我们的沉默，才给我们的子孙留下了一个千疮百孔的体制和一个世风日下的社会，这是一个没有自由、没有人权、没有公正、没有道德、没有底线，难以生存的丛林社会。
-    当某一天，我们的子孙被恶人、被体制所迫害的时候，当他们生存的权利都遭到剥夺的时候，那不是他们的错，也不是“它们”的错，而是我们的错，是现在正在沉默的我们的错。那双伸向我们子孙幼体的魔爪，那把刺入我们子孙心脏的尖刀，那颗射进我们子孙头颅的子弹，都是我们一手纵容亲手打造的，每一个当下尚且在沉默的人都是恶魔们的帮凶。
-    同胞们！站起来！站出来！勇敢的喊出我们的口号：驱逐马列邪教，恢复中华正统；解散共产匪党，建立中华联邦；抵制独裁专制，执行民主宪政！驱逐马列，恢复中华；解散共党，建立联邦；抵制独裁，执行宪政！
-国情现状：
-    当下中国“爱国”情怀之最，令人堪忧，已形成一种排他性的、失去理智的爱国观念，这是一种打着爱国旗号的极端民族主义。若继续发展，恐怕终将步日本军国主义的后尘。
-    先有人类后有国家，是公民建立国家，国家是公民的国家，是公民治理国家，而不是国家统治公民。公民对于国家的爱，应该是爱这片土地，以及爱这片土地上的同胞，而不是爱中国这两个字，不是爱中国政府，更不是爱某个肮脏的政党。
-    是的，肮脏的政党。任何政党、任何政客，都不能被视为天然高尚。包括五民党，也包括我们自己在内。这里所说的“肮脏”，并不是指某些具体行为污秽不堪，而是提醒我们：政党和政客从不应被神化，他们需要接受监督，接受质疑，始终处于阳光之下。
-    那些天天喊着冠冕堂皇的口号、看似高尚伟大的政客们，都不是高尚的、都不是伟大的，不过是为了他们切身的利益，装作高尚伟大罢了！不要被诸如“全心全意为人民服务”这样的空洞口号所欺骗，这世界只有全心全意为自己服务的人，没有全心全意为人民服务的人。
-    同胞们，记住这一点：权利是自己争取的，不是别人给予的，更不是官员施舍的，不要听他们在喊什么口号，要看他们在做什么事情，要假定他们全是坏人恶人，不要想着他们都是好人善人，不要幻想着这世界有青天大老爷存在。
-    权利，如果你不争取、我不争取、大家都不争取，坏人就会越来越多，权利就会越来越少；权利，如果你也争取、我也争取、大家都去争取，坏人就会越来越少，权利就会越来越多。
-    同胞们，对于说一套做一套言行不一的政党和政客，那就拿起你手中的选票，推翻这个政党的执政，赶走这个可恶的政客，还世界一片清澈，为儿女留下一片蓝天。
-     ——“五民主义”奠基人、《五民宪法》撰写人何清风，一身正气、两袖清风，何清风。
+**摘要：同胞们！站起来！站出来！勇敢的喊出我们的口号：驱逐马列邪教，恢复中华正统；解散共产匪党，建立中华联邦；抵制独裁专制，执行民主宪政！驱逐马列，恢复中华；解散共党，建立联邦；抵制独裁，执行宪政！先有人类后有国家，是公民建立国家，国家是公民的国家，是公民治理国家，而不是国家统治公民。**
+
+### **一、告同胞书：**
+&nbsp;&nbsp;&nbsp;&nbsp;港澳台同胞、海内外侨胞都是血浓于水的一母同胞，虽因种种历史原因，大陆一直未能实现政治体制的民主化，造成大陆同胞尚且生活在水深火热之中。恳请港澳台、海内外同胞，积极参与五民主义的宣传，积极参与组建中华民族联邦共和国政府，积极向欧美等发达国家宣传推荐五民党的理念、主义和目标。
+&nbsp;&nbsp;&nbsp;&nbsp;但真正决定未来命运的，仍是中国大陆的同胞们。我们必须站起来、站出来，行使我们作为一个公民应有的权利，推翻一切集权与专制的统治，为我们的子孙后代留下蓝天白云与自由空气。敬告每一个正在沉默的同胞，我们的沉默是在犯罪，我们的沉默造成了恶魔的肆无忌惮和为所欲为，因为我们的沉默，才给我们的子孙留下了一个千疮百孔的体制和一个世风日下的社会，这是一个没有自由、没有人权、没有公正、没有道德、没有底线，难以生存的丛林社会。
+&nbsp;&nbsp;&nbsp;&nbsp;当某一天，我们的子孙被恶人、被体制所迫害的时候，当他们生存的权利都遭到剥夺的时候，那不是他们的错，也不是“它们”的错，而是我们的错，是现在正在沉默的我们的错。那双伸向我们子孙幼体的魔爪，那把刺入我们子孙心脏的尖刀，那颗射进我们子孙头颅的子弹，都是我们一手纵容亲手打造的，每一个当下尚且在沉默的人都是恶魔们的帮凶。
+&nbsp;&nbsp;&nbsp;&nbsp;同胞们！站起来！站出来！勇敢的喊出我们的口号：驱逐马列邪教，恢复中华正统；解散共产匪党，建立中华联邦；抵制独裁专制，执行民主宪政！驱逐马列，恢复中华；解散共党，建立联邦；抵制独裁，执行宪政！
+### **二、国情现状：**
+&nbsp;&nbsp;&nbsp;&nbsp;当下中国“爱国”情怀之最，令人堪忧，已形成一种排他性的、失去理智的爱国观念，这是一种打着爱国旗号的极端民族主义。若继续发展，恐怕终将步日本军国主义的后尘。先有人类后有国家，是公民建立国家，国家是公民的国家，是公民治理国家，而不是国家统治公民。公民对于国家的爱，应该是爱这片土地，以及爱这片土地上的同胞，而不是爱中国这两个字，不是爱中国政府，更不是爱某个肮脏的政党。
+&nbsp;&nbsp;&nbsp;&nbsp;是的，肮脏的政党。任何政党、任何政客，都不能被视为天然高尚。包括五民党，也包括我们自己在内。这里所说的“肮脏”，并不是指某些具体行为污秽不堪，而是提醒我们：政党和政客从不应被神化，他们需要接受监督，接受质疑，始终处于阳光之下。那些天天喊着冠冕堂皇的口号、看似高尚伟大的政客们，都不是高尚的、都不是伟大的，不过是为了他们切身的利益，装作高尚伟大罢了！不要被诸如“全心全意为人民服务”这样的空洞口号所欺骗，这世界只有全心全意为自己服务的人，没有全心全意为人民服务的人。
+&nbsp;&nbsp;&nbsp;&nbsp;同胞们，记住这一点：权利是自己争取的，不是别人给予的，更不是官员施舍的，不要听他们在喊什么口号，要看他们在做什么事情，要假定他们全是坏人恶人，不要想着他们都是好人善人，不要幻想着这世界有青天大老爷存在。
+&nbsp;&nbsp;&nbsp;&nbsp;权利，如果你不争取、我不争取、大家都不争取，坏人就会越来越多，权利就会越来越少；权利，如果你也争取、我也争取、大家都去争取，坏人就会越来越少，权利就会越来越多。同胞们，对于说一套做一套言行不一的政党和政客，那就拿起你手中的选票，推翻这个政党的执政，赶走这个可恶的政客，还世界一片清澈，为儿女留下一片蓝天。
+**<p align="left">——————“五民主义”奠基人、《五民宪法》撰写人何清风，一身正气、两袖清风。</p>**
