--- a/宪政博客/宪法第一章/论中国民主的未来之《五民宪法》详解  第1篇.md
+++ b/宪政博客/宪法第一章/论中国民主的未来之《五民宪法》详解  第1篇.md
@@ -19,4 +19,4 @@
 &nbsp;&nbsp;&nbsp;&nbsp;在当今世界，民主的实践面临诸多困境：西方民主饱受分裂与低效之苦，威权体制则难以回应人民对自由的渴望。《五民宪法》提供了一种“第三条道路”，既继承了中国传统的政治智慧，又吸纳了现代民主的普世价值，并结合了中国的实际国情和世界主流政治体制发展的方向。它不仅是一部法律文本，更是一场关于中国民主未来的思想实验，也是全体中国人相互签署的共同契约，激发我们思考，促使我们团结：如何在保持国家稳定与文化自信的同时，赋予公民真正的治理权力？
 ### **结语：迈向民主的星辰大海**
 &nbsp;&nbsp;&nbsp;&nbsp;《五民宪法》第一章总则以民治为魂，勾勒出一幅令人振奋的民主图景。它告诉我们，中国的民主未来不是对西方的简单模仿，而是植根于自身文明的创新实践。民治、民主、民权、民生、民族——这五个理念如五颗星辰，指引着中国迈向一个自由、民主、正义、平等、求实和繁荣的未来。下一篇文章将聚焦于条款细节，深入探讨《五民宪法》中的条款设计，敬请期待这场思想的盛宴！
-**<p align="left">——————“五民主义”奠基人、《五民宪法》撰写人何清风，一身正气、两袖清风。</p>**
+**<p align="right">——————“五民主义”奠基人、《五民宪法》撰写人何清风，一身正气、两袖清风。</p>**
