--- a/宪政博客/宪法第一章/论中国民主的未来之《五民宪法》详解 第2篇.md
+++ b/宪政博客/宪法第一章/论中国民主的未来之《五民宪法》详解 第2篇.md
@@ -13,4 +13,4 @@
 &nbsp;&nbsp;&nbsp;&nbsp;是的，肮脏的政党。任何政党、任何政客，都不能被视为天然高尚。包括五民党，也包括我们自己在内。这里所说的“肮脏”，并不是指某些具体行为污秽不堪，而是提醒我们：政党和政客从不应被神化，他们需要接受监督，接受质疑，始终处于阳光之下。那些天天喊着冠冕堂皇的口号、看似高尚伟大的政客们，都不是高尚的、都不是伟大的，不过是为了他们切身的利益，装作高尚伟大罢了！不要被诸如“全心全意为人民服务”这样的空洞口号所欺骗，这世界只有全心全意为自己服务的人，没有全心全意为人民服务的人。
 &nbsp;&nbsp;&nbsp;&nbsp;同胞们，记住这一点：权利是自己争取的，不是别人给予的，更不是官员施舍的，不要听他们在喊什么口号，要看他们在做什么事情，要假定他们全是坏人恶人，不要想着他们都是好人善人，不要幻想着这世界有青天大老爷存在。
 &nbsp;&nbsp;&nbsp;&nbsp;权利，如果你不争取、我不争取、大家都不争取，坏人就会越来越多，权利就会越来越少；权利，如果你也争取、我也争取、大家都去争取，坏人就会越来越少，权利就会越来越多。同胞们，对于说一套做一套言行不一的政党和政客，那就拿起你手中的选票，推翻这个政党的执政，赶走这个可恶的政客，还世界一片清澈，为儿女留下一片蓝天。
-**<p align="left">——————“五民主义”奠基人、《五民宪法》撰写人何清风，一身正气、两袖清风。</p>**
+**<p align="right">——————“五民主义”奠基人、《五民宪法》撰写人何清风，一身正气、两袖清风。</p>**
