--- a/宪政博客/宪法第一章/论中国民主的未来之《五民宪法》详解  第3篇.md
+++ b/宪政博客/宪法第一章/论中国民主的未来之《五民宪法》详解  第3篇.md
@@ -20,4 +20,4 @@
 &nbsp;&nbsp;&nbsp;&nbsp;第一条以民治为核心，重新定义了国家与公民的关系，为中国民主的未来提供了明确的方向。这不仅回应了西方民主的局限，如过度依赖代议制而忽略公民直接参与，也避免了传统集权体制对个人自由的压制。通过将公民置于国家之上，《五民宪法》的第一条为中国民主提供了“第三条道路”。在人工智能、数据监控等新技术的兴起对公民权利构成了新挑战，而《五民宪法》通过保护反抗压迫权和选举与被选举权，为应对这些挑战提供了制度保障。同时，“公民没有爱国的义务”打破了民族主义的桎梏，使中国民主能够在开放与包容中迎接全球化的机遇。
 ### **结语：民治的星辰大海**
 &nbsp;&nbsp;&nbsp;&nbsp;《五民宪法》第一条，以其对民治的深刻诠释，点燃了中国民主未来的希望之光。通过“先有人类后有国家”的宣言，赋予公民无上的主体地位；通过五项基本权利的保障，构筑了民治的坚实基石；通过推翻与重建的权利与义务，激发了公民的能动性。这一条款不仅是一部宪法的开篇，更是通向自由、公平、繁荣的中国民主之路的起点。
-**<p align="right">——————“五民主义”奠基人、《五民宪法》撰写人何清风，一身正气、两袖清风。</p>**
+### **<p align="right">——————“五民主义”奠基人、《五民宪法》撰写人何清风，一身正气、两袖清风。</p>**
