--- a/宪政博客/宪法第一章/论中国民主的未来之《五民宪法》详解  第4篇.md
+++ b/宪政博客/宪法第一章/论中国民主的未来之《五民宪法》详解  第4篇.md
@@ -17,4 +17,4 @@
 &nbsp;&nbsp;&nbsp;&nbsp;最后，第二条赋予公权机构的使命——————保障公民权利而非统治奴役人民——为中国民主提供了一条“第三条道路”。它既不同于西方代议制的低效与民粹风险，也避免了集权体制的压迫性。通过公民共建、权利至上的原则，以《五民宪法》为根基为中国民主勾勒出一个自由而有序的未来。
 ### **结语：民治与自由的宪政灯塔**
 &nbsp;&nbsp;&nbsp;&nbsp;《五民宪法》第二条以“公民共建国家”与“法无禁止皆可为”为核心，确立了公权组织的民治原则与自由基石。它不仅为公权机构设计提供了方向，也为中国民主的未来点亮了灯塔。在这一条款的指引下，政府等公权机构成为公民意志的延伸，权利成为宪政的底线，自由成为社会的灵魂。
-**<p align="right">——————“五民主义”奠基人、《五民宪法》撰写人何清风，一身正气、两袖清风。</p>**
+### **<p align="right">——————“五民主义”奠基人、《五民宪法》撰写人何清风，一身正气、两袖清风。</p>**
