--- a/官方信息.md
+++ b/官方信息.md
@@ -1,23 +1,18 @@
 * **本文档列明中华联邦和五民党的官方信息，未列明的则不属于官方，谨防上当受骗，谨防抹黑破坏。**
-* 中华联邦Discord：https://discord.gg/rdnzcbYryr
-* 中华联邦电报群：https://t.me/frczhlb1
-* 中联社推特：https://x.com/zhonglianshe
-* 官方GitHub：https://github.com/wumindang
-* 五民党推特：https://x.com/wumindang
-* 公民日报推特：https://x.com/gongminribao
+* 官方GitHub：https://github.com/He-Qingfeng
+* 公民日报推特：https://x.com/gong_min_ri_bao
 * 联邦政府网：暂无
 * 公民安全网：暂无
-* 五民党官网：暂无
-* 五民币官网：www.wuminbi.com
+* 公民币官网：www.wuminbi.com
 
-* **融资缴费**
+<pre>
+```text
+0x5Ce9B56b9D1812a7cF29841E21756F09cA7D223B
+```
+</pre>
+
+
+git clone https://github.com/wumindang/FRC.git
+* **募款捐赠**
 * 收款地址：0x5Ce9B56b9D1812a7cF29841E21756F09cA7D223B
-* 购买五民币：1 USDT = 10000 WMB；
-* 请复制以太坊【收款地址】支付USDT。
-
-* **五民党《DeFi民运》发行智能合约**
-* 以太坊合约地址：0xE7723686c4AE5BDF19c8f0c4F6EB4c6195640060
-
-* **缴纳党费**
-* 缴款地址：0x164afac6284d94017ede2c8d02636c71d19c775c
-* 加入五民党的党友，每人每年需支付1000 WMB党费，请复制以太坊【缴款地址】支付WMB。
+* 请复制上述以太坊【收款地址】捐赠USDT。
