--- a/官方信息.md
+++ b/官方信息.md
@@ -6,11 +6,11 @@
 * 公民币官网：www.wuminbi.com
 
 
+* **募款捐赠**
+* 请复制下列以太坊【收款地址】捐赠USDT。
+* 收款地址：
 ```text
 0x5Ce9B56b9D1812a7cF29841E21756F09cA7D223B
 ```
 
 
-* **募款捐赠**
-* 收款地址：0x5Ce9B56b9D1812a7cF29841E21756F09cA7D223B
-* 请复制上述以太坊【收款地址】捐赠USDT。
