--- a/官方信息.md
+++ b/官方信息.md
@@ -1,13 +1,12 @@
-* **本文档列明中华联邦和五民党的官方信息，未列明的则不属于官方，谨防上当受骗，谨防抹黑破坏。**
+* **本文档列明中华联邦的官方信息，未列明的则不属于官方，谨防上当受骗，谨防抹黑破坏。**
 * 官方GitHub：https://github.com/He-Qingfeng
+* 中联社推特：https://x.com/zhong_lian_she
 * 公民日报推特：https://x.com/gong_min_ri_bao
 * 联邦政府网：暂无
 * 公民安全网：暂无
 * 公民币官网：www.wuminbi.com
 
-
-* **募款捐赠**
-* 请复制下列以太坊【收款地址】捐赠USDT。
+* 募款捐赠：请复制下列以太坊【收款地址】捐赠USDT。
 * 收款地址：
 ```text
 0x5Ce9B56b9D1812a7cF29841E21756F09cA7D223B
